se mejoró el apartado de las postulaciones

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,7 +4,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-background-color: #ffffff;
   --ion-text-color: #1a1a1a;
 
-  --color-primary: #5f87e3;
+  --color-primary: #648ddb;
   --color-secondary: #429ef5;
   --color-accent: #648ddb;
   }
